--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "star-wars",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pedrokohler.github.io/star-wars-nata-house/",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "jest": "26.6.0"
   }
 }
